# OSM-binary

./: .gitignore  Makefile.am  configure.ac
debian/: changelog  control  rules
include/: Makefile.am
include/osmpbf/: osmformat.pb.h  osmpbf.h.in
m4/: ax_lib_protobuf_lite.m4
src/: Makefile.am
tools/: Makefile.am  osmpbf-outline.cpp
